# deps_curl

./: CMakeLists.txt
resources/curl_7290_cmake/: CMakeLists.txt
